Add Phase 5 env vars for auth persistence and worker

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,10 @@ SMTP_USER=
 SMTP_PASS=
 HOOK_API_KEY=
 AUTO_NOTE_FROM_TRANSCRIPT=true
+AUTH_REQUIRED=true
+AUTH_SECRET=change-me-in-production
+ADMIN_EMAIL=admin@mom.local
+ADMIN_PASSWORD=admin12345
+DATA_DIR=./data
+JOB_WORKER_INTERVAL_MS=2000
+EMAIL_JOB_MAX_RETRIES=3
